[package]
name = "quilt-installer"
description = "The installer for quilt-loader"

version = "0.1.1"
license = "Apache-2.0"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
iced = { git = "https://github.com/iced-rs/iced", default_features = false, features = ["glow", "image", "tokio"] }
image = { version = "0.23", default_features = false, features = ["png"] }
native-dialog = "0.6.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
opt-level = "z"
